# nix2flatpak

./: Cargo.toml  README.md  flake.nix
examples/: README.md  flake.nix
lib/: closureAnalyzer.nix  metadata.nix  mkFlatpak.nix  overlays.nix  rewriter.nix  runtimeIndex.nix
runtimes/org.kde.Platform/6.10/: runtime-index.json
src/: lib.rs
tests/: gnome-calculator.nix  kcalc-flatpak.nix  kcalc.nix
